Sincronice con el segundo migrate, puse que la columna pizza_id en la tabla ingredients sea temporalnente null
