# Swagger4VPizza.yaml
@@ -84,19 +84,6 @@ components:
         name:
           type: string
           example: Tomato Sauce
-    PizzaType:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        name:
-          type: string
-          example: Medium
-        price:
-          type: number
-          example: 12.35
     Pizza:
       type: object
       properties:
@@ -111,14 +98,16 @@ components:
           type: string
           format: url
           example: https://imag.bonviveur.com/pizza-margarita.jpg
+        price:
+          type: number
+          example: 12.35
+        ok_celiacs:
+          type: boolean
+          example: true
         ingredients:
           type: array
           items:
             $ref: '#/components/schemas/PizzaIngredient'
-        types:
-          type: array
-          items:
-            $ref: '#/components/schemas/PizzaType'
     PizzaOrder:
       type: object
       properties:
@@ -126,10 +115,6 @@ components:
           type: integer
           format: int64
           example: 10
-        pizzatype:
-          type: integer
-          format: int64
-          example: 25
         quantity:
           type: integer
           format: int64
